# hammerhead-studio.github.io

./: .gitignore  about_us.html  content_guidelines.html  flake.nix  games.html  index.html  presskit.html  presskit_guildle.html  privacy_policy.html  site-build.cabal  website.cabal
.github/workflows/: build.yml
app/: Main.hs
resources/: style.css
src/: about_us.html  content_guidelines.html  games.html  index.html  presskit.html  presskit_guildle.html  privacy_policy.html
src/_includes/: footer.html  header.html  latest_news.html
src/_layouts/: default.html
src/resources/: style.css
