cabal-version: 3.16
name: website
version: 0.1.0.0
license: NONE
author: HammerHead Studio
maintainer: 59007706+SAKASHITA-Koki@users.noreply.github.com
-- A copyright notice.
-- copyright:
build-type: Simple

common warnings
    ghc-options: -Wall

executable website
    -- Import common warning flags.
    import: warnings
    main-is: Main.hs
    build-depends: base ^>=4.20.2.0, containers
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -Wall
